--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThreeJS Starter</title>
+    <title>Dinamic Terrain</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 </head>
 <body>
     <canvas class="webgl"></canvas>
+    <main>
+        <div class="credit">
+            David Web Designs <br>
+            <div>🤯</div>
+        </div>
+    </main>
 </body>
 </html>
